fixes
- fix tos term showing simple terms even if none provided
- fix title not centered on lander
- fix empty spots for background preview selection on lander
- fix empty area in commission when no examples provided
- fix type error and error on no folders provided on gallerydata utility
- fix unstyled tippy and links on main.sass
- fix yaml extension throwing ansible error for site.yml

--- a/src/main.sass
+++ b/src/main.sass
@@ -20,6 +20,12 @@ body
   background-color: var(--theme-body-bg)
   color: var(--theme-body-fg)
   font-family: var(--theme-font-body)
-
+  .tippy-box
+    background-color: var(--theme-tooltip-bg)
+    color: var(--theme-tooltip-fg)
+    text-align: center
+    .tippy-svg-arrow
+      fill: var(--theme-tooltip-bg)
 a
   cursor: pointer
+  color: var(--theme-link)
